syntax = "proto3";

option go_package = "github.com/strangelove-ventures/horcrux/pkg/proto";

package proto;
// TODO: Rename it as GPRCserver. It makes more sense since we are using it for all connections. 
// CosignerGRPC handles all the services (the server)
service CosignerGRPC {
	rpc SignBlock (GRPCSignBlockRequest) returns (CosignerGRPCSignBlockResponse) {}
	rpc SetNoncesAndSign (CosignerGRPCSetNoncesAndSignRequest) returns (CosignerGRPCSetNoncesAndSignResponse) {}
  rpc GetNonces (CosignerGRPCGetNoncesRequest) returns (CosignerGRPCGetNoncesResponse) {}
  rpc TransferLeadership (CosignerGRPCTransferLeadershipRequest) returns (CosignerGRPCTransferLeadershipResponse) {}
  rpc GetLeader (CosignerGRPCGetLeaderRequest) returns (CosignerGRPCGetLeaderResponse) {}
}

message Block {
	int64 height = 1;
	int64 round = 2;
	int32 step = 3;
	bytes signBytes = 4;
	int64 timestamp = 5;
}

message CosignerGRPCSignBlockRequest {
	string chainID = 1;
	Block block = 2;
}

message CosignerGRPCSignBlockResponse {
	bytes signature = 1;
}

message Nonce {
	int32 sourceID = 1;
	int32 destinationID = 2;
	bytes pubKey = 3;
	bytes share = 4;
	bytes signature = 5;
}

message HRST {
	int64 height = 1;
	int64 round = 2;
  int32 step = 3;
  int64 timestamp = 4;
}

message CosignerGRPCSetNoncesAndSignRequest {
	repeated Nonce nonces = 1;
	HRST hrst = 2;
	bytes signBytes = 3;
  string chainID = 4;
}

message CosignerGRPCSetNoncesAndSignResponse {
	bytes noncePublic = 1;
	int64 timestamp = 2;
	bytes signature = 3;
}

message CosignerGRPCGetNoncesRequest {
	HRST hrst = 1;
  string chainID = 2;
}

message CosignerGRPCGetNoncesResponse {
	repeated Nonce nonces = 1;
}

message CosignerGRPCTransferLeadershipRequest {
  string leaderID = 1;
}

message CosignerGRPCTransferLeadershipResponse {
  string leaderID = 1;
  string leaderAddress = 2;
}

message CosignerGRPCGetLeaderRequest {}

message CosignerGRPCGetLeaderResponse {
  string leader = 1;
}
